[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13" }
tower-http = {version = "0.5.2", features = ["trace"] }

serde = "1.0.199"
serde_json = "1.0.116"

tracing-subscriber = "0.3.18"
tracing = "0.1.40"
